# python-stuff

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-spark.yml
ai-security-control-plane/: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  prd.md  pyproject.toml
ai-security-control-plane/docs/: DEVELOPER_JOURNEY.md  OBSERVABILITY.md
ai-security-control-plane/examples/: policy.example.yaml
ai-security-control-plane/examples/developer-journey/: README.md  ascp_pr_checks.py  github-actions-pr.yml
ai-security-control-plane/punchlist/scan-20260319T210300Z-6543cd3dbb62/: punchlist.md  results.sarif
ai-security-control-plane/src/ascp/: __init__.py  config.py  logging_utils.py
ai-security-control-plane/src/ascp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai-security-control-plane/src/ascp/api/: __init__.py  app.py  dashboard_routes.py  main.py
ai-security-control-plane/src/ascp/api/templates/dashboard/: base.html  home.html  tenant.html
ai-security-control-plane/src/ascp/assurance/: __init__.py  runner.py  scenarios.py
ai-security-control-plane/src/ascp/core/: __init__.py  types.py
ai-security-control-plane/src/ascp/gateway/: openai_proxy.py
ai-security-control-plane/src/ascp/policy/: __init__.py  document.py  document_engine.py  engine.py
ai-security-control-plane/src/ascp/storage/: __init__.py  factory.py  ports.py  postgres_fs.py  sqlite_fs.py
ai-security-control-plane/tests/: test_adversarial.py  test_api.py  test_assurance.py  test_dashboard.py  test_developer_journey_script.py  test_document_policy.py  test_policy_engine.py  test_sqlite_fs.py
arttools/: ai_writer.py  config.py  copy_audit.py  extract_palette.py  image_describe.py  image_ops.py  mood_board.py  next_painting.py  palette.py  photo_lineart.py  publish_print.py  site_updater.py
arttools/templates/: print_page.html
basics/: README.md  convert_image.py  dict.py  error_handling.py  functions.py  hello.py  helloworld.py  lists.py  loops.py  os.py  planets.py  printBlah.py  sets.py  strings.py  threads.py  tuples.py
basics/tests/: test_basics.py
docs/: index.html
eye/: README.md  checker.py  conf.py
eye-of-sauron/: .gitignore  README.md  checker.py  rules_loader.py  rules_modern.py  suppressions-python-stuff-tests.txt
eye-of-sauron/rules/: modern-core.yaml  schema.yaml  secrets.yaml  tier2-languages.json  tier2-languages.yaml
eye-of-sauron/tests/: test_checker.py  test_eye_conf.py  test_rules_loader.py
eye/tests/: test_checker.py  test_eye_conf.py
parse-data/: README.md  parse-csv.py
parse-data/tests/: test_parse_data.py
python-automation/: README.md
python-automation/Source Code/: batchingCommands.py  fileIO.py  organizeDirectory.py
python-automation/tests/: test_automation.py
python-building-tools/: README.md  arguments.py  sub-freespace.py  sub.py
python-building-tools/tests/: test_building_tools.py
python-essential-training/: README.md
python-essential-training/Chap02/: class.py  fibonacci.py  primes.py
python-essential-training/Chap06/: while.py
python-essential-training/Chap07/: function.py
python-essential-training/Chap15/: db-api.db  db-api.py
python-essential-training/tests/: test_migration_plan.py
python-process-text/: README.md
python-process-text/code/: code_02_XX Reading Data.ipynb  code_03_XX Text Cleansing and Extraction.ipynb  code_04_XX Advanced Text Processing.ipynb  open_spark.py  use-ngrams.py  use-nltk.py  use-tokens.py  use_idftdf.py  use_pos.py
python-process-text/tests/: test_process_text.py
tests/: test_mood_board.py  test_next_painting.py  test_palette.py  test_publish_print.py  test_spark.py
writingtools/: README.md  config.yaml  render.py  spark.py
(+1 files in other folders)
