[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arttools"
version = "0.1.0"
description = "AI-powered publishing and creative tools for independent artists"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "Jinja2>=3.1",
    "Pillow>=10.0",
    "click>=8.1",
    "ddgs>=0.1",
]

[project.scripts]
publish-print = "arttools.publish_print:cli"
extract-palette = "arttools.extract_palette:cli"
next-painting = "arttools.next_painting:cli"
patreon-plan = "arttools.patreon_plan:cli"
mood-board = "arttools.mood_board:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["arttools*"]

[tool.setuptools.package-data]
arttools = ["templates/*.html"]
