[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arttools"
version = "0.1.0"
description = "AI-powered publishing and creative tools for independent artists"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "Jinja2>=3.1",
    "Pillow>=10.0",
    "click>=8.1",
    "ddgs>=0.1",
    "openai>=1.0",
    "pyyaml>=6.0",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "pillow-heif>=0.13",
]

[project.scripts]
publish-print = "arttools.publish_print:cli"
extract-palette = "arttools.extract_palette:cli"
next-painting = "arttools.next_painting:cli"
patreon-plan = "arttools.patreon_plan:cli"
mood-board = "arttools.mood_board:cli"
batch-resize = "arttools.batch_resize:cli"
color-match = "arttools.color_match:cli"
photo-scout = "arttools.photo_scout:cli"
photo-lineart = "arttools.photo_lineart:cli"
daily-spark = "writingtools.spark:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["arttools*", "writingtools*"]

[tool.setuptools.package-data]
arttools = ["templates/*.html"]
writingtools = ["*.yaml"]
