[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascp"
version = "0.1.0"
description = "AI Security Control Plane — foundations for policy gateway, assurance runs, and pluggable storage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ASCP contributors" }]
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "pyyaml>=6.0.1,<7",
    "httpx>=0.26,<1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
]
postgres = [
    "psycopg[binary]>=3.1,<4",
]
dev = [
    "pytest>=7.4",
    "fastapi>=0.109,<1",
    "httpx>=0.26",
    "ruff>=0.1.9",
    "mypy>=1.7",
]

[project.scripts]
ascp-serve = "ascp.api.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["ascp"]
